<resources>
    <string name="app_name">Passion Meet</string>
    <string name="signup_button_label">Sign up</string>
    <string name="signup_email_hint">Ex: user@example.com</string>
    <string name="signup_username_hint">Ex: Trevodorax</string>
    <string name="signup_submit_button_label">Start the adventure</string>
    <string name="signup_page_title">Registering</string>
    <string name="signup_mandatory_fields_explanation">Fields with the asterix (*) are required.</string>
    <string name="signup_email_label">Email <font color='#FF0000'>*</font></string>
    <string name="signup_username_label">Username <font color='#FF0000'>*</font></string>
    <string name="signup_password_label">Password (> 5 chars) <font color='#FF0000'>*</font></string>
    <string name="cgu_signup">When i click on Start the adventure, i hereby agree to the Terms of Service of Passion Meet.</string>
    <string name="sign_in_button_label">Sign in</string>
    <!-- Strings related to login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="submit_button_label">Save</string>
    <string name="select_passion_title">Select your passions </string>
    <string name="starting_page_sub_text">Now you can share your passion with the world</string>
    <string name="starting_page_app_name">Passion meet</string>
    <string name="groups">My groups</string>
    <string name="notif_encounter_text">crossed your path!</string>
    <string name="last_encounters">My last encounters</string>
    <string name="my_account">My account</string>
    <string name="update_passions">Update my passions</string>
    <string name="stay_connected">Stay Connected</string>
    <string name="create_activity_page_title">Create an activity</string>
    <string name="activity_name_label">Activity name <font color='#FF0000'>*</font></string>
    <string name="activity_name_hint">Share a coffee</string>
    <string name="activity_description_hint">I love coffee, let\'s make some great ones together !</string>
    <string name="activity_description_label">Description <font color='#FF0000'>*</font></string>
    <string name="activity_start_date_label">Activity start date <font color='#FF0000'>*</font></string>
    <string name="create_activity_btn">Create this activity</string>
    <string name="activity_date_hint">05/12/2025</string>
    <string name="activity_participant_hint">4</string>
    <string name="activity_max_participants_label">Max participants <font color='#FF0000'>*</font></string>
    <string name="activity_location_hint">242 rue du faubourg saint antoine, Paris</string>
    <string name="activity_location_label">Location <font color='#FF0000'>*</font></string>
    <string name="text_chat">Text chat</string>
    <string name="activities_suggested">Activities suggested</string>
    <string name="audio_chat">Audio chat</string>
    <string name="add_activity">Add activity</string>
    <string name="see_map_activities">See map</string>
    <string name="leave_group">Leave group</string>
    <string name="send_message_hint">Write something...</string>
    <string name="sign_up_activity">Sign up for the activity</string>
    <string name="participants">Participants:</string>
    <string name="description">Description:</string>
    <string name="hint_for_maps">Click on the map to open it on full screen</string>
    <string name="sign_off_activity">Sign off from activity</string>
    <string name="create_group_btn">Create this group</string>
    <string name="group_image_hint">ex: https://my-pic.fr</string>
    <string name="group_image_label">Group image url <font color='#FF0000'>*</font></string>
    <string name="group_name_hint">ex: Pokemon Lovers</string>
    <string name="group_name_label">Group name <font color='#FF0000'>*</font></string>
    <string name="create_group_page_title">Create your group</string>
    <string name="passion_label">Select a passion linked to the group</string>
    <string name="map_activites_btn">All</string>
</resources>