<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="16dp"
    android:paddingHorizontal="64dp"
     android:background="?attr/backgroundColor"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_page_title"
        android:textSize="32sp"
        android:paddingVertical="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_mandatory_fields_explanation"
        android:textSize="12sp"
        android:paddingBottom="40dp" />

    <!-- Email Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_email_label"
            android:textSize="16sp"
            android:paddingHorizontal="8dp" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/signup_email_hint"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:paddingBottom="40dp" />
    </LinearLayout>

    <!-- Username Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_username_label"
            android:textSize="16sp"
            android:paddingHorizontal="8dp"
        />
        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/signup_username_hint"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:paddingBottom="40dp"
        />
    </LinearLayout>

    <!-- Password Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
    >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_password_label"
            android:textSize="16sp"
            android:paddingHorizontal="8dp"
        />
        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:layout_marginBottom="40dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cgu_signup"
        android:textSize="12sp"
        android:paddingBottom="32dp"
        android:paddingHorizontal="32dp"
    />

    <!-- Login Button -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_submit_button_label"
            android:padding="12dp"
            android:background="?attr/colorPrimary"

            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:insetLeft="0dp"
            android:insetRight="0dp"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>