<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/form_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="64dp"
    android:background="?attr/backgroundColor"
    android:paddingVertical="16dp">


    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/header_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="32dp"
        android:text="@string/create_group_page_title"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:text="@string/signup_mandatory_fields_explanation"
        android:textSize="12sp" />

    <!-- Name Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/group_name_label"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/group_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/group_name_hint"
            android:inputType="text"
            android:padding="12dp"
            android:paddingBottom="40dp" />
    </LinearLayout>

    <!-- Description Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/activity_description_label"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/group_description_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/activity_description_hint"
            android:inputType="text"
            android:padding="12dp"
            android:paddingBottom="40dp" />
    </LinearLayout>

    <!-- Image URL Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/group_image_label"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/groupe_image_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/group_image_hint"
            android:inputType="text"
            android:padding="12dp" />
    </LinearLayout>

    <!-- Dropdown for PASSIONS -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/passion_label"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_passion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16sp"/>
    </LinearLayout>


    <!-- Create activity Button -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:insetLeft="0dp"
            android:insetTop="0dp"

            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="12dp"
            android:text="@string/create_group_btn" />

    </androidx.cardview.widget.CardView>


    <ProgressBar
        android:id="@+id/activity_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />

</LinearLayout>