<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
            android:id="@+id/header_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="64dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/background"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="24sp"
            android:textStyle="bold"
            android:text="Hello"
            />
        <TextView
            android:id="@+id/hello_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="Milowo !"
            />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_groups"
            android:layout_marginEnd="8dp"
            />
        <TextView
            android:id="@+id/my_account_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_account"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp">

        <Button
            android:id="@+id/update_passion_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:background="?attr/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/update_passions"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_groups"
            android:layout_marginEnd="8dp"
            />
        <TextView
            android:id="@+id/groups_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/groups"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/groups_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.example.passionmeet.ui.encounters.EncounterFragment" />
</LinearLayout>